Fix card container gap I wasn't allowing the cards to take up 100% of the container if space was available

--- a/styles.css
+++ b/styles.css
@@ -102,12 +102,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(auto-fit, minmax(min-content, 40px)) minmax(0, auto);
-    width: clamp(250px, 20%, 400px);
+    width: clamp(250px, 100%, 400px);
   }
-
-  /* .book-card:last-child {
-
-  } */
 
   .delete-button {
     border: none;
